Fixing feature image on mobile

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -179,7 +179,7 @@ body {
 	border-bottom: 1px solid fade(@black,10);
 }
 .entry-feature-image {
-	margin: 20px 0 0;
+	margin: -40px 0 0;
 	width: 100%;
 	@media @small {
 	  margin-top: -40px;
